<?xml version="1.0"?>
<package>
  <name>canny_edge_my_face</name>
  <version>0.1.0</version>
  <description>The canny_edge_my_face package</description>
  <maintainer email="nlamprian@gmail.com">Nick Lamprianidis</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>cv_camera</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
